use Base64 encoder/decoder from package org.apache.commons.codec.binary.Base64 instead of sun.misc.BASE64Encoder